@@ -12,7 +12,7 @@
 
 #ifdef HAVE_ISP
 
-#ifdef __CONF_COMPILE_ISP
+#ifdef COMPILE_ISP
 
 /*****************************************************************************/
 /** 
