@@ -11,7 +11,7 @@
 
 #include "hml/tim.h"
 
-#ifdef __CONF_COMPILE_TIM
+#ifdef COMPILE_TIM
 
 /*****************************************************************************/
 /** 
