@@ -146,7 +146,8 @@
              - support <library> target, user can get usage via <make help>
              - optimize <make version> function
              update Makefile to v0.3.0
-             - support MCU(mandatory), CLKFRE, CODE and XRAM for MCU configuration
+             - support MCU(mandatory), CLKFRE, CODE and XRAM variable for MCU configuration
              - optimize build information print
            (4)optimize sleep function
            (5)refactor version.h
+           (6)optimize macro for module compile selection
